<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="unknown_server_error">Unknown server error</string>
    <string name="unknown_error">An error occurred</string>
    <string name="error_check_internet_connection">Please make sure to have an internet connection.</string>
    <string name="error_ssl_handshake">Please check whether the time is correctly set.</string>
    <string name="title_qrscanner">QR Scanner</string>
    <string name="button_label_scan_qr">Scan QR</string>
    <string name="title_settings">Settings</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="menu_label_balances">Balances</string>
    <string name="menu_label_transactions">Transactions</string>
    <string name="manu_label_transaction_details">Transaction Details</string>
    <string name="address_hint">Enter Address</string>

    <string name="address_to">To: %1$s</string>
    <string name="hash">Hash: %1$s</string>

    <string name="choose_input_method">Choose input method</string>
    <string name="address_input_address_book">Address book</string>
    <string name="address_input_ens">ENS name</string>
    <string name="address_input_qr_code">Scan QR code</string>
    <string name="address_input_clipboard">Paste from clipboard</string>

    <string name="invalid_ethereum_address">Invalid ethereum address</string>

    <string name="button_label_get_started">Get started</string>
    <string name="button_label_next">Next</string>
    <string name="button_label_complete">Proceed with this Address</string>

    <string name="error_address_not_set">There was a problem setting the address</string>
    <string name="error_invalid_safe">Invalid safe</string>
    <string name="error_unknown">Unknown error occurred</string>

    <string name="connect_title">Connect to a Safe</string>
    <string name="connect_description">Copy-paste the Safe address or click on “Receive” in the web interface to scan the code with your phone</string>
    <string name="valid_safe_address_label">Valid Safe address</string>
    <string name="action_confirm">Confirm</string>

    <string name="setup_completed_title">Setup Completed</string>
    <string name="action_start">Start</string>
    <string name="setup_complete_description">You are now able to view and filter your safe transactions</string>

    <string name="onboarding_slide1_title">Always see all the details</string>
    <string name="onboarding_slide1_description">For every transaction all details will be provided to give the full insight on what is happening</string>
    <string name="onboarding_slide2_title">Always stay up to date</string>
    <string name="onboarding_slide2_description">You will be notified of any interaction with your Safe</string>
    <string name="onboarding_slide3_title">Check your Safe health</string>
    <string name="onboarding_slide3_description">Get an easy overview if your Safe is properly setup and secure</string>

    <string name="transaction_token_amount_label">%1$s %2$s</string>
    <string name="transaction_byte_label">(%d bytes)</string>

    <string name="pending_label">Waiting for confirmation</string>
    <string name="history_label">History</string>

    <string name="safe_label">Safe</string>
    <string name="transaction_details_type_label">Type</string>
    <string name="transaction_details_network_fees_label">Network Fees</string>
    <string name="transaction_details_raw_data_label">Raw Data</string>
    <string name="transaction_details_operation_label">Operation</string>
    <string name="transaction_details_value_label">Value</string>
    <string name="transaction_details_submission_date_label">Submission date</string>
    <string name="transaction_details_execution_date_label">Execution date</string>
    <string name="transaction_details_transaction_hash_label">Transaction hash</string>

    <string name="view_transaction_on">View transaction on Etherscan.io</string>

    <string name="push_tx_message">You have a transaction</string>
    <string name="push_tex_title">Transaction</string>

    <string name="transaction_filter_title">Filter Transactions</string>

    <string name="transaction_filter_date_from_hint">From:</string>
    <string name="transaction_filter_date_to_hint">To:</string>

    <string name="transaction_filter_token_symbol_label">Token symbol filter</string>
    <string name="transaction_filter_timestamp_label">Timestamp filter</string>
    <string name="transaction_filter_transaction_type_label">Type filter</string>
    <string name="transaction_clear_filters_button">Clear filters</string>

    <string name="address_clipboard_success">Address copied to clipboard</string>
    <string name="share_address">Share address</string>

    <string name="hash_clipboard_success">Hash copied to clipboard</string>
    <string name="share_hash">Share hash</string>

    <string name="transaction_date_from_chip">From: %1$s</string>
    <string name="transaction_date_to_chip">To: %1$s</string>

</resources>
