<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/setup_complete_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_setup_completed"
        app:layout_constraintBottom_toTopOf="@id/setup_completed_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setup_completed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/setup_completed_title"
        android:textColor="@color/secondaryText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/setup_complete_icon"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/setup_completed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:text="@string/setup_complete_description"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/setup_complete_btn"
        app:layout_constraintTop_toBottomOf="@id/setup_completed_title"
        app:lineHeight="20sp" />

    <TextView
        android:id="@+id/setup_complete_btn"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/action_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
